# biological-evaluation

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cluster-compose.yml  compose.yml  main.py  neo4j.conf  pyproject.toml  reactome.sh  requirements.txt  test.py  virtual-machine-compose.yml
bsys/: model.py  simulation.py  tests.py
docs/: TODO-reactome  apricopt.md  bibliography.bib  bibliography.md  conf.py  docs.drawio  docs.md  docs.typ  dump.typ  index.rst  indexes.csv  labels.csv  labels.md  large-boolean-networks.md  logic-old-2.typ  logic.typ  logics.typ  main.typ  math.typ  modules.rst  notes.md  pert.excalidraw  petab.md  progress.md  py.md  query.md  reactome.drawio  reactome.md  realt-types.csv  rs.md  systems-biology.md  tools.md  usage.rst
model/: model.yaml
queries/: final_query.cypher  hard_query_collection.cypher  has_event.cypher  helper.cypher  nodes_all.cypher  physical_entities.cypher  plat_hasComponent_limited.cypher  relations_all.cypher  reverse_1.cypher  reverse_2.cypher  signal_transduction_fast.cypher  yield_model.cypher
services/: django.sh  open-box.Dockerfile
src/: benchmark.py  blackbox.py  experiment1.py  job.sh  main.py  main.rs  model.py  nitric_oxide_signal_transduction.py  optimization.py  orchestrator.py  trash  worker.py
src/biological-evaluation/: simulation.py
src/bsys/: model.py  simulation.py  tests.py
src/queries/: fixed_point.cypher  index.cypher  index_tutorial.cypher  pathways_from_gene.cypher  signal_transduction.cypher  signal_transduction_ignored_pathways.cypher  smart_fixed_point.cypher
src/reactome-analysis/: experiment1.cypher  hard_query_collection.cypher  helper.cypher  nodes_all_profile.cypher  plat_hasComponent.cypher  produced_by.cypher  react_level_2.cypher  reverse_2.cypher  signal_transduction_fast.cypher  smart_fixed_point.cypher  yield_model.cypher
