[project]
name = "biological-evaluation"
version = "0.1.0"
description = "Plausability of biological scenarios through virtual patients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libroadrunner>=2.8.0",
    "neo4j>=5.28.2",
    "python-libsbml>=5.20.5",
    "buckpass",
    "biological-scenarios-generation"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "sphinx>=8.2.3",
    "sphinxawesome-theme>=5.3.2",
]


[tool.uv.sources]
buckpass = { workspace = true }
biological-scenarios-generation = { workspace = true }


[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101", # Use of `assert` detected
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.basedpyright]
reportMissingTypeStubs = false
